Functionality Add Auction + frontend

--- a/AuctionAce.Api/Views/Home/Index.cshtml
+++ b/AuctionAce.Api/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@{
-    /* Layout = null; */
-}
+﻿@using AuctionAce.Api.Models.Auctions
+@model HomeViewModel
 
 <!DOCTYPE html>
 <html lang="en">
@@ -29,65 +28,26 @@
 
 
         <div class="row">
-            <div class="col-md-3">
-                <div class="card">
-                    <img class="card-img-top" src="https://studentprawa.pl/media/k2/items/cache/af6038056f6231c664e3ef073c45af10_L.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Auction Subject</h5>
-                        <p class="card-text">Start Date: <span id="start-date">[Start Date Value]</span></p>
-                        <p class="card-text">End Date: <span id="end-date">[End Date Value]</span></p>
-                        <p class="card-text">Registered Members: <span id="registered-members">[Registered Members Value]</span></p>
-                        <p class="card-text">Items: <span id="items">[Items Value]</span></p>
-                        <a href="#" class="btn btn-primary">View Auction</a>
+
+            @if (Model.Auctions != null)
+            {
+                foreach (var item in Model.Auctions)
+                {
+                    <div class="col-md-3">
+                        <div class="card">
+                            <img class="card-img-top" src="https://studentprawa.pl/media/k2/items/cache/af6038056f6231c664e3ef073c45af10_L.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">@item.AuctionName</h5>
+                                <p class="card-text">Start Date: <span id="start-date">@item.StartDate</span></p>
+                                <p class="card-text">End Date: <span id="end-date">@item.EndDate</span></p>
+                                <p class="card-text">Registered Members: <span id="registered-members">[Registered Members Value]</span></p>
+                                <p class="card-text">Items: <span id="items">[Items Value]</span></p>
+                                <a href="#" class="btn btn-primary">View Auction</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-
-
-
-            <div class="col-md-3">
-                <div class="card">
-                    <img class="card-img-top" src="https://studentprawa.pl/media/k2/items/cache/af6038056f6231c664e3ef073c45af10_L.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Auction Subject</h5>
-                        <p class="card-text">Start Date: <span id="start-date">[Start Date Value]</span></p>
-                        <p class="card-text">End Date: <span id="end-date">[End Date Value]</span></p>
-                        <p class="card-text">Registered Members: <span id="registered-members">[Registered Members Value]</span></p>
-                        <p class="card-text">Items: <span id="items">[Items Value]</span></p>
-                        <a href="#" class="btn btn-primary">View Auction</a>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-lg-3">
-                <div class="card">
-                    <img class="card-img-top" src="https://studentprawa.pl/media/k2/items/cache/af6038056f6231c664e3ef073c45af10_L.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Auction Subject</h5>
-                        <p class="card-text">Start Date: <span id="start-date">[Start Date Value]</span></p>
-                        <p class="card-text">End Date: <span id="end-date">[End Date Value]</span></p>
-                        <p class="card-text">Registered Members: <span id="registered-members">[Registered Members Value]</span></p>
-                        <p class="card-text">Items: <span id="items">[Items Value]</span></p>
-                        <a href="#" class="btn btn-primary">View Auction</a>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-lg-3">
-                <div class="card">
-                    <img class="card-img-top" src="https://studentprawa.pl/media/k2/items/cache/af6038056f6231c664e3ef073c45af10_L.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Auction Subject</h5>
-                        <p class="card-text">Start Date: <span id="start-date">[Start Date Value]</span></p>
-                        <p class="card-text">End Date: <span id="end-date">[End Date Value]</span></p>
-                        <p class="card-text">Registered Members: <span id="registered-members">[Registered Members Value]</span></p>
-                        <p class="card-text">Items: <span id="items">[Items Value]</span></p>
-                        <a href="#" class="btn btn-primary">View Auction</a>
-                    </div>
-                </div>
-            </div>   
+                }
+            }
         </div>
         <div class="row" style="margin-top:20px ">
             <div class="d-grid gap-2 col-6 mx-auto">
