--- a/AuctionAce.Api/Views/Auction/AddAuction.cshtml
+++ b/AuctionAce.Api/Views/Auction/AddAuction.cshtml
@@ -1,17 +1,4 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aukcja Formularz</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="~/css/AddAuctionStyle.css" asp-append-version="true" />
-   
-</head>
-<body>
-    <div class="container mt-5">
+﻿    <div class="container mt-5">
         <h1 class="mb-4">Formularz Aukcji</h1>
         <form id="auctionForm">
             <div class="form-group">
@@ -35,7 +22,7 @@
                 <input type="file" class="form-control-file" id="image" name="image">
             </div>
             <!-- Tabela przedmiotów -->
-            <div id="itemList">
+            <div id="itemList" name="itemList">
                 <h2>Lista Przedmiotów</h2>
                 <table class="table">
                     <thead>
@@ -103,7 +90,7 @@
                             <label for="condition">Stan:</label><br>
                             <input type="radio" id="newCondition" name="condition" value="nowa">
                             <label for="newCondition">Nowy</label><br>
-                            <input type="radio" id="usedCondition" name="condition" value="używana">
+                            <input type="radio" id="usedCondition" name="condition" value="uzywana">
                             <label for="usedCondition">Uzywany</label><br>
                         </div>
                         <button type="submit" class="btn btn-primary">Dodaj</button>
@@ -131,60 +118,90 @@
     </div>
 
 
-    <script>
-    $(document).ready(function () {
-        $("#saveButton").click(function () {
-            var itemCount = $("#itemsTableBody tr").length;
-            if (itemCount < 1) {
-                $('#noItemModal').css('display', 'block');
-                return false;
-            } else if (itemCount > 1) {
-                $('#successModal').css('display', 'block');
-                $("#auctionForm").submit();
-            } else {
+<script>
+    $("#addItemForm").submit(function (event) {
+        event.preventDefault();
+        var itemName = $("#itemName").val();
+        var itemDescription = $("#itemDescription").val();
+        var itemCategory = $("#itemCategory").val();
+        var itemImage = $("#itemImage")[0].files[0];
+        var startPrice = $("#startPrice").val();
+        var buyNowPrice = $("#buyNowPrice").val();
+        var isNew = $("input[name='condition']:checked").val();
+        var tableRow = $("<tr>").append(
+            $("<td>").text(itemName),
+            $("<td>").text(itemDescription),
+            $("<td>").text(itemCategory),
+            $("<td>").append(itemImage ? $("<img>").attr("src", URL.createObjectURL(itemImage)).addClass("img-thumbnail") : ""),
+            $("<td>").text(startPrice),
+            $("<td>").text(buyNowPrice),
+            $("<td>").text(isNew)
+        );
+        $("#itemsTableBody").append(tableRow);
 
-                $("#auctionForm").submit();
+        // Clear the form
+        $("#addItemForm")[0].reset();
+
+        // Hide the modal
+        $("#addItemModal").modal("hide");
+    });
+
+    $(document).on('click', '.close', function () {
+        $(this).closest(".custom-modal").css('display', 'none');
+    });
+
+    $(document).on('click', '#closeCustomModal', function () {
+        $(this).closest(".custom-modal").css('display', 'none');
+    });
+
+    $("#saveButton").click(function () {
+        // Zbierz dane z formularza
+        var formData = new FormData();
+        formData.append('auctionName', $('#auctionName').val());
+        formData.append('description', $('#description').val());
+        formData.append('startDate', $('#startDate').val());
+        formData.append('endDate', $('#endDate').val());
+
+        // Dodaj zdjęcie aukcji, jeśli istnieje
+        var auctionImage = $('#image')[0].files[0];
+        if (auctionImage) {
+            formData.append('image', auctionImage);
+        }
+
+        // Zbierz dane przedmiotów
+        // $('#itemsTableBody tr').each(function (index, tr) {
+        //     var itemData = {
+        //         itemName: $(tr).find('td:eq(0)').text(),
+        //         itemDescription: $(tr).find('td:eq(1)').text(),
+        //         itemCategory: $(tr).find('td:eq(2)').text(),
+        //         startPrice: $(tr).find('td:eq(4)').text(),
+        //         buyNowPrice: $(tr).find('td:eq(5)').text(),
+        //         condition: $(tr).find('td:eq(6)').text()
+        //     };
+        //     formData.append('items[' + index + ']', JSON.stringify(itemData));
+
+        //     // Dodaj zdjęcie przedmiotu, jeśli istnieje
+        //     var itemImage = $(tr).find('td:eq(3) img').attr('src');
+        //     if (itemImage) {
+        //         formData.append('itemImages[' + index + ']', itemImage);
+        //     }
+        // });
+
+        // Wysłanie danych do kontrolera
+        $.ajax({
+            type: "POST",
+            url: "/Auction/AddAuction",
+            data: formData,
+            contentType: false,
+            processData: false,
+            success: function (response) {
+                // Wyświetl modal sukcesu
+                $("#successModal").css('display', 'block');
+            },
+            error: function (error) {
+                console.log(error);
             }
         });
-
-        $("#addItemForm").submit(function (event) {
-            event.preventDefault();
-            var itemName = $("#itemName").val();
-            var itemDescription = $("#itemDescription").val();
-            var itemCategory = $("#itemCategory").val();
-            var itemImage = $("#itemImage")[0].files[0];
-            var startPrice = $("#startPrice").val();
-            var buyNowPrice = $("#buyNowPrice").val();
-            var isNew = $("input[name='condition']:checked").val();
-            var tableRow = $("<tr>").append(
-                $("<td>").text(itemName),
-                $("<td>").text(itemDescription),
-                $("<td>").text(itemCategory),
-                $("<td>").append(itemImage ? $("<img>").attr("src", URL.createObjectURL(itemImage)).addClass("img-thumbnail") : ""),
-                $("<td>").text(startPrice),
-                $("<td>").text(buyNowPrice),
-                $("<td>").text(isNew)
-            );
-            $("#itemsTableBody").append(tableRow);
-
-            // Clear the form
-            $("#addItemForm")[0].reset();
-
-            // Hide the modal
-            $("#addItemModal").modal("hide");
-        });
-
-            $(document).on('click', '.close', function () {
-                $(this).closest(".custom-modal").css('display', 'none');
-            });
-
-            $(document).on('click', '#closeCustomModal', function () {
-                $(this).closest(".custom-modal").css('display', 'none');
-            });
-
     });
 </script>
 
-
-</body>
-</html>
