--- a/AuctionAce.Api/Views/Auction/Index.cshtml
+++ b/AuctionAce.Api/Views/Auction/Index.cshtml
@@ -1,7 +1,5 @@
-﻿
-@using AuctionAce.Api.Models.ViewModels.Auctions
+﻿@using AuctionAce.Api.Models.ViewModels.Auctions
 @model AuctionViewModel
-
 <div class="container-fluid">
     <div class="row">
 
