--- a/AuctionAce.Api/Views/Home/Index.cshtml
+++ b/AuctionAce.Api/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using AuctionAce.Api.Models.Auctions
+﻿@using AuctionAce.Api.Models.ViewModels.Home
 @model HomeViewModel
 
     <div class="container-fluid">        
