--- a/AuctionAce.Api/Views/Auction/AddAuction.cshtml
+++ b/AuctionAce.Api/Views/Auction/AddAuction.cshtml
@@ -1,4 +1,10 @@
-﻿    <div class="container mt-5">
+﻿@{
+    Layout = "~/Views/Shared/_LayoutLogged.cshtml";
+    string url = Url.Action("AllAuctionsById");
+}
+
+  
+ <div class="container mt-5">
         <h1 class="mb-4">Auction Form</h1>
         <form id="auctionForm">
             <div class="form-group">
@@ -64,33 +70,33 @@
                     <form id="addItemForm">
                         <div class="form-group">
                             <label for="itemName">Name</label>
-                            <input type="text" class="form-control" id="itemName" name="itemName" required>
+                        <input type="text" class="form-control" id="itemName" name="Name" required>
                         </div>
                         <div class="form-group">
                             <label for="itemDescription">Item Description</label>
-                            <textarea class="form-control" id="itemDescription" name="itemDescription" rows="3"></textarea>
+                        <textarea class="form-control" id="itemDescription" name="Description" rows="3"></textarea>
                         </div>
                         <div class="form-group">
                             <label for="itemCategory">Category</label>
-                            <input type="text" class="form-control" id="itemCategory" name="itemCategory">
+                        <input type="text" class="form-control" id="itemCategory" name="Category">
                         </div>
                         <div class="form-group">
                             <label for="itemImage">Photo</label>
-                            <input type="file" class="form-control-file" id="itemImage" name="itemImage">
+                        <input type="file" class="form-control-file" id="itemImage" name="Photo">
                         </div>
                         <div class="form-group">
                             <label for="startPrice">Start Price</label>
-                            <input type="number" class="form-control" id="startPrice" name="startPrice">
+                        <input type="number" class="form-control" id="startPrice" name="StartingPrice">
                         </div>
                         <div class="form-group">
                             <label for="buyNowPrice">Buy Now Price</label>
-                            <input type="number" class="form-control" id="buyNowPrice" name="buyNowPrice">
+                        <input type="number" class="form-control" id="buyNowPrice" name="BuyNowPrice">
                         </div>
                         <div class="form-group">
                             <label for="condition">State:</label><br>
-                            <input type="radio" id="newCondition" name="condition" value="nowa">
+                        <input type="radio" id="newCondition" name="NewUsed" value="nowa">
                             <label for="newCondition">New</label><br>
-                            <input type="radio" id="usedCondition" name="condition" value="uzywana">
+                        <input type="radio" id="usedCondition" name="NewUsed" value="uzywana">
                             <label for="usedCondition">Used</label><br>
                         </div>
                         <button type="submit" class="btn btn-primary">Add Item</button>
@@ -165,9 +171,9 @@
         Swal.fire({
             title: "Do you want to save auction?",
             showDenyButton: true,
-            showCancelButton: true,
+            showCancelButton: false,
             confirmButtonText: "Save",
-            denyButtonText: `Don't save`
+            denyButtonText: `Correct`
         }).then((result) => {
             if (result.isConfirmed) {
                 // Zbierz dane z formularza
@@ -183,28 +189,26 @@
                     formData.append('image', auctionImage);
                 }
 
-                // Zbierz dane przedmiotów
-                // $('#itemsTableBody tr').each(function (index, tr) {
-                //     var itemData = {
-                //         itemName: $(tr).find('td:eq(0)').text(),
-                //         itemDescription: $(tr).find('td:eq(1)').text(),
-                //         itemCategory: $(tr).find('td:eq(2)').text(),
-                //         startPrice: $(tr).find('td:eq(4)').text(),
-                //         buyNowPrice: $(tr).find('td:eq(5)').text(),
-                //         condition: $(tr).find('td:eq(6)').text()
-                //     };
-                //     formData.append('items[' + index + ']', JSON.stringify(itemData));
 
-                //     // Dodaj zdjęcie przedmiotu, jeśli istnieje
-                //     var itemImage = $(tr).find('td:eq(3) img').attr('src');
-                //     if (itemImage) {
-                //         formData.append('itemImages[' + index + ']', itemImage);
-                //     }
-                // });
+                $('#itemsTableBody tr').each(function (index, tr) {
+                    var itemData = {
+                        itemName: $(tr).find('td:eq(0)').text(),
+                        itemDescription: $(tr).find('td:eq(1)').text(),
+                        itemCategory: $(tr).find('td:eq(2)').text(),
+                        startPrice: $(tr).find('td:eq(4)').text(),
+                        buyNowPrice: $(tr).find('td:eq(5)').text(),
+                        condition: $(tr).find('td:eq(6)').text()
+                    };
+                    formData.append('Items[' + index + '].Name', itemData.itemName);
+                    formData.append('Items[' + index + '].Description', itemData.itemDescription);
+                    formData.append('Items[' + index + '].Category', itemData.itemCategory);
+                    formData.append('Items[' + index + '].StartingPrice', itemData.startPrice);
+                    formData.append('Items[' + index + '].BuyNowPrice', itemData.buyNowPrice);
+                    formData.append('Items[' + index + '].NewUsed', itemData.condition);
+                });
 
-                // Wysłanie danych do kontrolera
 
-                // Wysłanie danych do kontrolera
+                
                 $.ajax({
                     type: "POST",
                     url: "/Auction/AddAuction",
@@ -215,7 +219,7 @@
                         console.log(response)
                         if (response.success) {
                             Swal.fire("Saved!", "", "success").then(() => {
-                                window.location.href = "/Auction/MyAuctions"; // Przekierowanie do widoku MyAuctions
+                                window.location.href = "/Auction/AllAuctionsById"; // Przekierowanie do widoku MyAuctions
                             });
                         } else {
                             Swal.fire("Error, Something went wrong", "", "error");
