--- a/AuctionAce.Api/Views/Auction/AllAuctions.cshtml
+++ b/AuctionAce.Api/Views/Auction/AllAuctions.cshtml
@@ -1,15 +1,20 @@
-﻿@using AuctionAce.Api.Models.ViewModels.Home
-@model HomeViewModel
+﻿@using AuctionAce.Api.Models.ViewModels.Auctions
+@model AuctionViewModel
 @{
     if (Model.User != null)
     {
         int userId = Model.User.Id;
-        Layout = "~/Views/Shared/_LayoutLogged.cshtml";
+        if(userId != 0)
+        {
+            Layout = "~/Views/Shared/_LayoutLogged.cshtml";
+        }
+        else
+        {
+            Layout = "~/Views/Shared/_LayoutUnlogged.cshtml";
+        }       
+        
     }
-    else
-    {
-        Layout = "~/Views/Shared/_LayoutUnlogged.cshtml";
-    }
+   
 }
 
 
@@ -35,10 +40,12 @@
                         <img class="card-img-top" src="https://studentprawa.pl/media/k2/items/cache/af6038056f6231c664e3ef073c45af10_L.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">@item.AuctionName</h5>
+                            <h5 class="card-title">@item.Id</h5>
                             <p class="card-text">Start Date: <span id="start-date">@item.StartDate</span></p>
                             <p class="card-text">End Date: <span id="end-date">@item.EndDate</span></p>
                             <p class="card-text">Registered Members: <span id="registered-members">[Registered Members Value]</span></p>
                             <p class="card-text">Items: <span id="items">[Items Value]</span></p>
+                            <a href="@Url.Action("AuctionItemList", "Auction", new { auctionId = item.Id })" class="btn btn-primary">View Auction</a>
                         </div>
                     </div>
                 </div>
